fix: 增加-webkit-backface-visibility

--- a/src/components/Rotate/index.less
+++ b/src/components/Rotate/index.less
@@ -5,12 +5,15 @@
   height: 100%;
   transform-style: preserve-3d;
 }
+
 .front,
 .back {
   width: 100%;
   height: 100%;
+  -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
 }
+
 .front {
   position: absolute;
   top: 0;
