--- a/src/components/flip-timer/src/Countdown/Flipper/style.less
+++ b/src/components/flip-timer/src/Countdown/Flipper/style.less
@@ -91,7 +91,7 @@
 
 .front,
 .back {
-  // backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
   position: absolute;
   overflow-y: hidden;
